java省内存启动